--- a/Bwl.RaspberryPi.Camera.TestWebNetCore/Pages/Shared/_Layout.cshtml
+++ b/Bwl.RaspberryPi.Camera.TestWebNetCore/Pages/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Status">Status</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Camera">Camera</a>
                         </li>
                     </ul>
                 </div>
