--- a/Bwl.RaspberryPi.Camera.TestWebNetCore/wwwroot/css/site.css
+++ b/Bwl.RaspberryPi.Camera.TestWebNetCore/wwwroot/css/site.css
@@ -8,15 +8,15 @@ a.navbar-brand {
 }
 
 /* Provide sufficient contrast against white background */
-a {
+/*a {
   color: #0366d6;
-}
+}*/
 
-.btn-primary {
+/*.btn-primary {
   color: #fff;
   background-color: #1b6ec2;
   border-color: #1861ac;
-}
+}*/
 
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
   color: #fff;
@@ -68,4 +68,8 @@ body {
   width: 100%;
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
+}
+
+.custom-input{
+    width:100px;
 }
